[package]
name = "piper"
version = "0.1.1"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
description = "Async pipes, channels, mutexes, and more."
license = "MIT OR Apache-2.0"
repository = "https://github.com/stjepang/piper"

[dependencies]
crossbeam-utils = "0.7.0"
futures-sink = { version = "0.3.5", default-features = false, features = ["std"] }
futures-io = { version = "0.3.5", default-features = false, features = ["std"] }
futures-util = { version = "0.3.5", default-features = false, features = ["std"] }

[dev-dependencies]
async-std = { version = "1.5.0", features = ["unstable"] }
futures = { version = "0.3.4", default-features = false, features = ["std"] }
smol = { git = "https://github.com/stjepang/smol.git" }
